# eywa-clients

./: .gitignore  .gitmodules  LICENSE  robotics.graphql
bb/: README.md  bb.edn  deps.edn  pom.xml
bb/.clojure-mcp/: scratch_pad.edn
bb/dev/: user.clj
bb/examples/: file_operations_cleanup.clj  file_operations_simple.clj  graphql_examples.clj  new_features_demo.clj  simple_robot.clj  test_eywa_client.clj
bb/src/: user.clj
csharp/: .gitignore  CHANGELOG.md  CSHARP_GUIDE.md  EywaClient.sln  README.md  build-nuget.ps1  build-nuget.sh
examples/: file_operations_example.js  file_operations_example.py
go/: eywa.go  go.mod  main.go
nodejs/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
nodejs/src/: eywa.js  (+4 more)
py/: CHANGELOG.md  README.md  WINDOWS_ASYNCIO_GATHER_ISSUE.md  eywa.py  pyproject.toml  requirements.txt  robotics.graphql
py/examples/: IMPLEMENTATION_COMPLETE.md  TASK_SCHEMA_CORRECTED.md  async_graphql.py  cli_sample.py  echo.py  file_input.py  graphql.py  loop.py  quick_report_test.py  quick_test.py  raw_graphql.py  simple_files_demo.py  task_reporting_test.py  test_ensure_path.py  test_eywa_client.py  test_helper_functions.py  test_new_report.py  test_task_comprehensive.json  test_upload_folder_path.py  webdriver.py
py/examples/tasks/: test_task.json
py/src/: eywa.py  eywa.pyi  eywa_files.py  rpc.py
py/src/eywa/: __init__.py  eywa.py
py/src/eywa_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
py/src/eywa_files/: __init__.py
ruby/: CHANGELOG.md  LICENSE  README.md  eywa-client-0.3.0.gem  eywa.gemspec
(+110 files in other folders)
