[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "eywa-client"
authors = [{name = "Robert Gersak", email = "robi@neyho.com"}]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["eywa", "client", "json-rpc", "graphql", "robotics", "automation"]
version = "0.4.0"
description = "EYWA client library for Python providing JSON-RPC communication, GraphQL queries, and task management for EYWA robots"
dependencies = [
  "nanoid>=2.0.0",
  "aiohttp>=3.8.0"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/neyho/eywa"
Repository = "https://github.com/neyho/eywa.git"
Issues = "https://github.com/neyho/eywa/issues"

[tool.setuptools]
packages = ["eywa", "eywa_files"]

[tool.setuptools.package-dir]
"" = "src"
